--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /docs/styleMain.css
 /docs/styleMainMobil.css
 /docs/styleNews.css
-/docs/styleNewsMobile.css
+/docs/styleNewsMobil.css
 /docs/styleNewsUpdater.css
 /docs/imgs/Box1.png
 /docs/imgs/Box2.png
